# FlappyTools

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
doc/: Doxyfile  dir_struct.dia
doc/commands/: copyres.md  gentarget.md  help.md  init.md  prebuild.md
scripts/: buildres.py  copyres.py  flappy  gentarget.py  help.py  init.py  prebuild.py  tools.py
scripts/targets/android/: copyres.py
scripts/targets/cmake/: copyres.py
scripts/targets/qt/: gentarget.py
templates/config/: config.h
templates/project/: .gitignore  config.json
templates/project/src/: ballctrl.cpp  ballctrl.h  basketctrl.cpp  basketctrl.h  ctrl.cpp  ctrl.h  gamectrl.cpp  gamectrl.h  mygamemanager.cpp  mygamemanager.h  mygamemgr.cpp  mygamemgr.h  world.cpp  world.h
templates/targets/android/app/: build.gradle
templates/targets/android/app/src/main/: AndroidManifest.xml
templates/targets/android/app/src/main/java/com/android/{!android.id!}/: FlappyActivity.java  FlappyGLView.java  FlappyJNILib.java
templates/targets/android/app/src/main/jni/: gl_code.cpp
templates/targets/android/app/src/main/res/values/: strings.xml
templates/targets/cmake/: CMakeLists.txt
templates/targets/cmake/src/: main.cpp
templates/targets/qt/: main.cpp  res.qrc  {!name!}.pro
templates/targets/web/: CMakeLists.txt  build.sh  index.html
templates/targets/web/src/: main.cpp
